--- a/TODOLISTGEMI.HTML
+++ b/TODOLISTGEMI.HTML
@@ -19,7 +19,7 @@
         }
 
         .completed {
-            background-color: #ccffcc;
+            background-color: greenyellow;
             color: white;
         }
 
